--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,12 +4,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: #000;
     box-sizing: border-box;
-}
-
-.post h1 {
-    color: cornflowerblue;
-    text-shadow: 2px 2px #000000;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 
 .container {
@@ -25,12 +21,11 @@ body {
     padding: 20px;
     width: 40%;
     text-align: center;
-    background: #fff;
     color: #000;
     font-size: 20px;
     font-weight: bold;
     text-shadow: 2px 2px #7f7c7c;
-    background-color: cornflowerblue;
+    background: cornflowerblue;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     margin: 0px;
 }
@@ -41,11 +36,22 @@ body {
     margin: 0px;
 }
 
+.cabecera .logo {
+    width: 60px;
+    vertical-align: middle;
+}
+
 .post {
     padding: 20px;
     width: 40%;
     text-align: center;
     border: 1px solid #3a3939;
     background: #fff;
+    margin: 0px;
+}
+
+.post h1 {
+    color: cornflowerblue;
+    text-shadow: 2px 2px #000000;
     margin: 0px;
 }
