--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,9 +4,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: #000;
     box-sizing: border-box;
-    <<<<<<< HEAD padding: 0;
+    padding: 0;
     margin: 0;
-    =======>>>>>>>footer
 }
 
 .container {
