--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,6 +57,10 @@ body {
     margin: 0px;
 }
 
+.post img {
+    width: 100%;
+}
+
 .footer {
     background-color: cornflowerblue;
     text-align: center;
